// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateWalletName should render 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-1bcidjh"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-1psxlcd"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-px3dod"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 2`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-px3dod"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ark wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 3`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-px3dod"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show an error message for duplicate name 4`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-px3dod"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="The name 'ARK Wallet 2' is already assigned to another wallet"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name consists only of whitespace 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-px3dod"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="WALLETS.VALIDATION.ALIAS_REQUIRED"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UpdateWalletName should show error message when name exceeds 42 characters 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1vhnc7q"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Wallet Name
          </h2>
          <div
            class="flex-1"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              Enter a name for this wallet address (only visible to you).
            </div>
            <form
              class="mt-8"
              data-testid="Form"
            >
              <fieldset
                class="flex flex-col css-5kz4tk"
              >
                <label
                  class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                  data-testid="FormLabel"
                  for="name"
                >
                  Wallet Name
                </label>
                <div
                  class="relative"
                >
                  <div
                    class="css-px3dod"
                  >
                    <div
                      class="relative flex h-full flex-1"
                    >
                      <input
                        aria-invalid="true"
                        autocomplete="off"
                        class="no-ligatures w-full border-none css-1nupw50"
                        data-testid="UpdateWalletName__input"
                        name="name"
                        type="text"
                        value=""
                      />
                    </div>
                    <div
                      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
                      data-testid="Input__addon-end"
                    >
                      <span
                        data-errortext="Wallet Name should have at most 42 characters"
                        data-testid="Input__error"
                      >
                        <div
                          class="text-theme-danger-500 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            circle-exclamation-mark.svg
                          </svg>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </fieldset>
              <div
                class="css-ngzslp"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="UpdateWalletName__cancel"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Cancel
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="UpdateWalletName__submit"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Save
                  </div>
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
